Add new parameters

--- a/settings.cfg
+++ b/settings.cfg
@@ -20,15 +20,16 @@ skiprows = 0
 
 
 [regression]
+enable = 1
 
 ;
-y = DTP_perc
+y =
 
 ; reseampling with RepeatedK-fold (l'ultimo elemento è escluso)
 resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 3}
 
 [classification]
-
+enable = 0
 ;
 y = type_DTE_DTP
 
