Add new arguments

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,7 +1,7 @@
 [settings]
 
 ;
-clear = 1
+clear = 0
 
 ;
 seed = 2892
@@ -20,18 +20,19 @@ skiprows = 0
 
 
 [regression]
-enable = 1
+enable = 0
 
 ;
-y =
+y = DTP_perc
 
-; reseampling with RepeatedK-fold (l'ultimo elemento è escluso)
-resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 3}
+; reseampling with RepeatedK-fold
+resampling = {'min_split': 2, 'max_split': 6, 'n_repeats': 10, 'scoring': 'r2'}
 
 [classification]
 enable = 0
+
 ;
 y = type_DTE_DTP
 
 ; reseampling with RepeatedK-fold
-resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 3}
+resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 3, 'scoring': 'accuracy'}
