--- a/settings.cfg
+++ b/settings.cfg
@@ -4,7 +4,7 @@
 clear = 0
 
 ;
-seed = 2892
+seed = 2021
 
 ; spiegare il fatto se mette 0 li usa tutti altrimenti, usa il numero impostato se < quelle disponibili
 cpu = 0
@@ -25,14 +25,14 @@ enable = 0
 ;
 y = DTP_perc
 
-; reseampling with RepeatedK-fold
+; reseampling with RepeatedKFold
 resampling = {'min_split': 2, 'max_split': 6, 'n_repeats': 10, 'scoring': 'r2'}
 
 [classification]
-enable = 0
+enable = 1
 
 ;
 y = type_DTE_DTP
 
-; reseampling with RepeatedK-fold
-resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 3, 'scoring': 'accuracy'}
+; reseampling with RepeatedStratifiedKFold
+resampling = {'min_split': 2, 'max_split': 3, 'n_repeats': 1, 'scoring': 'accuracy'}
