--- a/settings.cfg
+++ b/settings.cfg
@@ -1,38 +1,48 @@
 [settings]
+; <integer [0-1]> If 1 the previous results will be deleted
+clear = 1
 
-;
-clear = 0
-
-;
+; <integer or None> Set random seed.
 seed = 2021
 
-; spiegare il fatto se mette 0 li usa tutti altrimenti, usa il numero impostato se < quelle disponibili
+; <integer> If the number is 0, it will use all the CPUs.
 cpu = 0
 
+; ------------------------------
 
 [dataset]
-; dire di mettere il nome del file, viene riconosciuto automaticamente il tipo di file
-fname = anitaDB_03_03_2021.xlsx
-;
+; <string> Name of the file inserted in the "dataset" folder.
+fname = Breast_cancer.xlsx
+
+; <string> It indicates the separator of the dataset.
 separator = \t
-;
+
+; <integer> It indicates the number of rows to skip in the dataset during loading.
 skiprows = 0
 
+; ------------------------------
 
 [regression]
-enable = 0
-
-;
-y = DTP_perc
-
-; reseampling with RepeatedKFold
-resampling = {'min_split': 2, 'max_split': 6, 'n_repeats': 10, 'scoring': 'r2'}
-
-[classification]
+; <integer [0-1]> If it is 1, the regression analysis will be started.
 enable = 1
 
-;
-y = type_DTE_DTP
+; <string> Represents the name of the column(s) used as the dependent variable during the linear regression.
+; if multiple columns are selected, they must be separated by commas. (e.g.: col1,col2,...,coln).
+y = <columns_name>
 
-; reseampling with RepeatedStratifiedKFold
-resampling = {'min_split': 2, 'max_split': 3, 'n_repeats': 1, 'scoring': 'accuracy'}
+; <dict> Represents resampling through RepeatedK-Fold.
+; It is possible to set the minimum/maximum split, the number of repetitions and the metric to be used.
+resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 10, 'scoring': 'r2'}
+
+; ------------------------------
+
+[classification]
+; <integer [0-1]> If it is 1, classification will be initiated.
+enable = 0
+
+; <string> Represents the name of the column used during classification.
+y = <column_name>
+
+; <dict> Represents resampling through RepeatedStratifiedK-Fold.
+; It is possible to set the minimum/maximum split, the number of repetitions and the metric to be used.
+resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 10, 'scoring': 'accuracy'}
