--- a/settings.cfg
+++ b/settings.cfg
@@ -3,7 +3,7 @@
 clear = 1
 
 ; <integer or None> Set random seed.
-seed = 2021
+seed = 2892
 
 ; <integer> If the number is 0, it will use all the CPUs.
 cpu = 0
@@ -12,7 +12,7 @@ cpu = 0
 
 [dataset]
 ; <string> Name of the file inserted in the "dataset" folder.
-fname = Breast_cancer.xlsx
+fname = breast_q_dataset.xlsx
 
 ; <string> It indicates the separator of the dataset.
 separator = \t
@@ -28,11 +28,11 @@ enable = 1
 
 ; <string> Represents the name of the column(s) used as the dependent variable during the linear regression.
 ; if multiple columns are selected, they must be separated by commas. (e.g.: col1,col2,...,coln).
-y = <columns_name>
+y = bmi
 
 ; <dict> Represents resampling through RepeatedK-Fold.
 ; It is possible to set the minimum/maximum split, the number of repetitions and the metric to be used.
-resampling = {'min_split': 2, 'max_split': 4, 'n_repeats': 10, 'scoring': 'r2'}
+resampling = {'min_split': 2, 'max_split': 5, 'n_repeats': 100, 'scoring': 'r2'}
 
 ; ------------------------------
 
