--- a/settings.cfg
+++ b/settings.cfg
@@ -6,16 +6,16 @@ clear = 1
 seed = 2021
 
 ; <integer> If the number is 0, it will use all the CPUs.
-cpu = 1
+cpu = 14
 
 ; ------------------------------
 
 [dataset]
 ; <string> Name of the file inserted in the "dataset" folder.
-fname = breast_q_dataset.xlsx
+fname = uiss_covid19.csv
 
 ; <string> It indicates the separator of the dataset.
-separator = \t
+separator = ,
 
 ; <integer> It indicates the number of rows to skip in the dataset during loading.
 skiprows = 0
@@ -28,7 +28,7 @@ enable = 1
 
 ; <string> Represents the name of the column(s) used as the dependent variable during the linear regression.
 ; if multiple columns are selected, they must be separated by commas. (e.g.: col1,col2,...,coln).
-y = bmi
+y = TC_mean
 
 ; <dict> Represents resampling through RepeatedK-Fold.
 ; It is possible to set the minimum/maximum split, the number of repetitions and the metric to be used.
