--- a/settings.cfg
+++ b/settings.cfg
@@ -6,13 +6,13 @@ clear = 1
 seed = 2021
 
 ; <integer> If the number is 0, it will use all the CPUs.
-cpu = 14
+cpu = 1
 
 ; ------------------------------
 
 [dataset]
 ; <string> Name of the file inserted in the "dataset" folder.
-fname = uiss_covid19.csv
+fname = UISS-COVID19_dataset.csv
 
 ; <string> It indicates the separator of the dataset.
 separator = ,
@@ -28,7 +28,7 @@ enable = 1
 
 ; <string> Represents the name of the column(s) used as the dependent variable during the linear regression.
 ; if multiple columns are selected, they must be separated by commas. (e.g.: col1,col2,...,coln).
-y = TC_mean
+y = Ag_mean,TC_mean
 
 ; <dict> Represents resampling through RepeatedK-Fold.
 ; It is possible to set the minimum/maximum split, the number of repetitions and the metric to be used.
